Build production bundle.

--- a/example-dist/index.html
+++ b/example-dist/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <meta charset="utf-8" />
+  <title></title>  
   <link rel="stylesheet" href="style/rich-text-editor.css">
 </head>
 <body>
