--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>use title</title>
   <link rel="stylesheet" href="/style/rich-text-editor.css">
 </head>
 <body>
